css/style.css
/* ------------ GLOBAL VAR ------------ */
body {
    margin: 0;
}

/* ------------ END GLOBAL VAR -------- */
/*NAV*/
nav {
    /*max-height: 125px;*/
    width: 100%;
    background-color: #36312C;
    color: #36312C;
    position: fixed;
    border-bottom: 5px solid #FF8619;
    z-index: 1;
}

.navbar {
    margin: 0;
    min-height: 125px;
}

.navbar-inverse {
    display: flex;

}

.container-fluid {
    min-width: 98%;
    display: flex;
    margin-right: 0;
    padding: 0;
}

.navbar-nav {
    align-items: center;
    display: inline-flex;
    margin-left: auto;
}

.navbar-inverse .navbar-nav > li > a:hover {
    color: #FF8619;
    font-size: 1.2em;
}

nav img {
    max-height: 500%;
}

nav ul, li {
    display: block;
    float: right;
    font-size: x-large;
    font-weight: 700;
    white-space: nowrap;
}

@media screen and (min-width: 768px) {
    .rwd {
        display: none;
        background-color: #4cae4c;
    }
}

@media screen and (max-width: 768px) {
    .wide {
        display: none;
    }

    .navbar-nav {
        display: grid;
    }

    .navbar-header {
        min-width: 100%;
    }
}

/* ------------ LANDING PICTURE ------- */
.landing_picture {
    clear: both;
    /*margin: 1px 0 0 0;*/
    display: flex;
    flex: 1;
    width: 100%;
    text-align: left;
    flex-direction: column;
    background-image: url("../images/fs-banner.jpg");
    background-size: cover;
}

.landing_picture img {
    max-width: 100%;
    height: 100%;

}

.landing_picture h1 {
    padding: 10% 0 0 10%;
    color: #36312C;
    font-size: 400%;
}

.landing_picture h2 {
    margin: -1% 0 0 15%;
    color: #36312C;
    font-size: 270%;
}

button[type=button] {
    background-color: #FF8619;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 6px;
    cursor: pointer;
    font-size: larger;
}

button[type=button]:hover {
    font-size: xx-large;
}

/*.landing_picture a{*/
/*text-align: center;*/
/*}*/

.landing_picture div {
    text-align: center;
    margin: 2em;
    min-height: 70px;
}

/*********four icons*************/
.fourIcons {
    display: flex;
    background-color: #36312C;
    max-width: 100%;
    min-height: 250px;
    text-align: center;
    flex-wrap: wrap;
    border-bottom: 5px solid #FF8619;

}

.fourIcons div {
    /*background-color: green;*/
    display: flex;
    margin: auto;
    flex-direction: column;
    text-align: center;
    color: /*#FF8619*/ #E5D2BC;
}

.fourIcons div:hover {
    color: #FF8619;
    font-size: 1.2em;
}

.fourIcons div i {
    /*font-size:8em;*/
}

.fourIcons div span {
    font-size: 5em;
    padding: 3px;
}

/*.glyphicon {
    position: inherit;
}*/
/*********************************/
/*********about authors***********/

.authors h1 {
    font-weight: 800;
    font-size: 50px;
    color: #FF8619;
    margin-bottom: 30px;
}

div.authors {
    margin-top: 10em;
    margin-bottom: 5em;
}

div.author {
    margin-top: 10px;
}

.name {
    color: #FF8619;
    font-weight: bold;
    font-size: 20px;
}

.function {
    color: #36312C;
}

.card-container {
    position: relative;
    width: 200px;
    height: 200px;
    margin-bottom: 5em;
}

.card {
    transform-style: preserve-3d;
    transition: all 1s ease-in-out;
}

.card:hover {
    transform: rotateY(180deg);
}

.card .side {
    backface-visibility: hidden;
    /*height: 200px;*/
    width: 200px;
    overflow: hidden;
    cursor: context-menu;
}

.card .back {
    transform: rotateY(180deg);
    position: absolute;
    top: 0;
    left: 0;
}

.starW {
    height: 100%;
}

.icon {
    width: 30px;
    margin: 10px;
}

.icon:hover {
    width: 40px;
    margin: 5px;
}

@media screen and (max-width: 991px){
    .authors h1{
        text-align: center;
    }
}

/*********************************/
/***********Coming soon***********/

.comingSoon{
    margin: 10em auto;
}

.comingSoon h1{
    font-weight: 800;
    font-size: 50px;
    color: #FF8619;
    margin: 5px auto;
}

.comingSoon h2{
    color: #36312C;
    margin-top: 10px;
}

.radiusLeft{
    border-radius: 50px 0 0 50px;
}

.signUp{
    border-radius: 0 50px 50px 0;
    font-weight: bold;
    background: #FF8619;
    color: white;
}

.signUp:hover{
    background: #FF8619;
}

div .information{
    color: #36312C;
    margin: 0.5em auto;
}

/*********************************/

